--- a/smartspend/app/globals.css
+++ b/smartspend/app/globals.css
@@ -155,17 +155,13 @@
 
 .hero-image-wrapper {
   perspective: 1000px;
+  box-shadow: #093740;
 }
 
 .hero-image {
-  transform: rotateX(15deg) scale(1);
-  transition: transform 0.1s ease-out;
-  will-change: transform;
+  
 }
 
-.hero-image.scrolled {
-  transform: rotateX(0deg) scale(1) translateY(40px);
-}
 
 @keyframes text-slide {
   0% {
